@@ -14,6 +14,7 @@ Version 1.3.15+svn:
       list as they are also a kind of already running games.
   * User interface
     * During dialogs the speaker is shown in the sidebar and highlighted.
+    * Show unit standing animations and idle animations are now separate options
 
 Version 1.3.15:
   * Language and translations
