@@ -18,6 +18,7 @@ Version 1.3.15+svn:
  * User interface
    * During dialogs the speaker is shown in the sidebar and highlighted.
    * During ai moves the source hex is no longer highlighted.
+   * show unit standing animations and idle animations are now separate options
  * miscellaneous and bug fixes:
    * Moved destruction of conditional object before the mutex. This should 
      fix random crash in network disconnect.
